# aj-jojo-microservice-homework-day1

./: .gitignore  README.md
CSharp-hello/: Dockerfile  Program.cs  README.md
Scala-hello/: .dockerignore  .gitignore  Dockerfile  build.sbt
_docker-orchestrator/: Cargo.toml
bash-hello/: .dockerignore  .gitignore  Dockerfile  README.md  handler.sh  lib.sh  openapi.json  server.sh  swagger.html
csharp-hello/: .dockerignore  CSharp-hello.csproj  CSharp-hello.http  Program.cs  README.md
dart-hello/: .dockerignore  .env.example  Dockerfile  Procfile  README.md  pubspec.yaml
go-hello/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  go.mod  main.go
java-quarkus-hello/: .dockerignore  .gitignore  Dockerfile  README.md  openapi.json  pom.xml
java-spring-boot-gradle-hello/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  build.gradle  openapi.json  settings.gradle
java-spring-boot-maven-hello/: Dockerfile  README.md  openapi.json  pom.xml
js-hello/: .dockerignore  .gitignore  Dockerfile  README.md  package-lock.json  package.json
kotlin-spring-boot-hello/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  build.gradle.kts  settings.gradle.kts
lua-hello/: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  entrypoint.sh  nginx.conf.template  openapi.json
php-hello/: .dockerignore  Dockerfile  README.md  composer.json
python-hello/: .dockerignore  .gitignore  Dockerfile  README.md  main.py  requirements.txt
rust-hello/: Cargo.toml  Dockerfile  README.md
rust-hello/src/: main.rs
(+51 files in other folders)
